styles/style.css
*,
*::before,
*::after {
  box-sizing: border-box;
}

html {
  block-size: 100%;
}

.page {
  display: flex;
  justify-content: center;
  align-items: center;
  margin: auto;
  color: #fff;
  font-family: 'Fira Sans Condensed', sans-serif;
  font-size: 18px;
  background-color: #1b1919;
  inline-size: 1200px;
  block-size: 100%;
}

h1,
h2,
h3,
h4,
p,
ul,
ol,
li,
blockquote,
fieldset {
  margin: 0;
  padding: 0;
}

ul,
ol {
  list-style: none;
}

/* 1.0 Задаем Главный Контейнер Content */

.content {
  display: flex;
  max-width: 1140px;
  flex-direction: row;
  align-items: flex-end;
  gap: 30px;
}

/* 2.0 Задаем Result (Левая Часть Внутри Content) */

.result {
  display: flex;
  flex-direction: column;
  padding-top: 78px;
  gap: 16px;
}

/* 2.1 Задаем Контейнер Для Видео */

.result__video-container {
  position: relative;
  width: 711px;
  height: 386px;
  overflow: hidden;
}

/* 2.1.1 Растягиваем Видео Под Контейнер */

.result__video {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

/* 2.2 Задаем Форму */

.search-form {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: flex-start;
  width: 100%;
  gap: 40px;
}

/* 2.2.1 Стиль для "Город" и "Время суток" */

.search-form__fieldset-title {
  font-family: "Fira Sans Condensed", sans-serif;
  font-size: 18px;
  font-style: normal;
  font-weight: 400;
  line-height: normal;
}

/* 2.2.2 Общие стили для text-input и checkbox, общий стиль для кнопок */

.search-form__fieldset {
  border: none;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: flex-start;
  gap: 5px;
}

.button {
  cursor: pointer;
  color: #fff;
  text-align: center;
  font-family: "Fira Sans Condensed", sans-serif;
  font-size: 18px;
  font-style: normal;
  font-weight: 700;
  line-height: normal;
  background-color: transparent;
  border: 1px solid currentColor;
}

/* 2.2.3 Стили для text-input */

.search-form__textfield {
  cursor: text;
  border: none;
  background: none;
  color: rgba(255, 255, 255);
  border-top: 1px solid currentColor;
  border-bottom: 1px solid currentColor;
  font-family: "Fira Sans Condensed", sans-serif;
  font-size: 18px;
  font-style: normal;
  font-weight: 400;
  line-height: normal;
  min-width: 225px;
  min-height: 27px;
  padding: 1px 0;
  appearance: none;
}

/* 2.2.4 Стили для checkbox */

.search-form__checkbox-list {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  gap: 15px;
  min-width: 212px;
}

.search-form__label {
  display: flex;
  cursor: pointer;
  width: fit-content;
  align-items: center;
}

.search-form__pseudo-checkbox {
  position: relative;
  cursor: pointer;
  width: 19px;
  height: 19px;
  border: 1px solid #fff;
  margin-right: 5px;
  background-color: transparent;
  display: flex;
  align-items: center;
  justify-content: center;
}


/* 2.2.5 Стили для submit кнопки */

.search-form__submit-button {
  align-self: flex-end;
  width: 100%;
  padding: 5px;
}

/* 3.0 Задаем Details (Правая Часть Внутри Content) */

.content__details {
  display: flex;
  flex-direction: column;
  gap: 26px;
  min-width: 399px;
  height: 100%;
}

/* 3.1 Задаем Title */

.content__details .title {
  justify-content: flex-start;
  width: 100%;
  min-height: 210px;
}

.title {
  font-family: Oswald, sans-serif;
  font-size: 75px;
  font-style: normal;
  font-weight: 700;
  line-height: 94%; /* 70.5px */
  text-transform: uppercase;
}

.content__accent {
  color: #545050;
}

/* 3.2 Задаем Лист Карточек */

.content__list {
  overflow-y: auto;
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 298px;
  position: relative;
}

/* 3.3 Задаем Карточки */

/* Нам нужно чтобы карточки встали в 100% ширины родителя <ul>,*/
/* Поэтому прокидываем 100% ширины родителя для всех <li> */
.content__list li {
  width: 100%;
}

.content__list-item {
  max-width: 398px;
  min-height: 107px;
}

.content__list-item:not(:first-child) {
  margin-top: 30px;
}

.content__video-card {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: flex-start;
  width: 100%;
}

.content__video-card-thumbnail {
  width: 194px;
  height: 103px;
  object-fit: cover;
  object-position: center;
  flex-shrink: 0;
  align-self: end;
}

/*Занимаем Текстом все оставшееся пространство в карточке*/
.content__video-card-description-container {
  display: flex;
  flex-direction: column;
  gap: 6px;
  max-width: 199px;
  min-height: 103px;
  flex-grow: 1;
}

/* 3.3.1 Задаем Cтили Тексту Карточки */

.content__card-link {
  display: block;
  text-decoration: none;
  color: #FFF;
  margin: 2px;
}

.content__video-card-title {
  font-family: Oswald, sans-serif;
  font-size: 30px;
  font-style: normal;
  font-weight: 700;
  line-height: 100%; /* 30px */
  text-transform: uppercase;
  max-width: 199px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.content__video-card-description {
  font-family: "Fira Sans Condensed", sans-serif;
  font-size: 18px;
  font-style: normal;
  font-weight: 400;
  line-height: 90%;
  max-width: 199px;
}

/* 3.4 Стили для more кнопки */

li:has(> .more-button) {
  margin-top: 30px;
  padding: 3px;
}

.more-button {
  width: 100%;
  padding-top: 5px;
  padding-bottom: 5px;
}

/* 4.0 Состояния элементов формы и кнопок */

/* 4.1 Focus for Text Input, Checkboxes */

.search-form__textfield:focus {
  outline: none;
}

.search-form__label:has(:focus-visible) {
  outline: 1px solid #fff;
  outline-offset: 1px;
}

/* 4.2 Active Checkboxes */

.search-form__checkbox:checked + .search-form__pseudo-checkbox::before {
  content: '';
  width: 15px;
  height: 15px;
  background-color: #fff;
}

/* 4.3 Checkboxes text underline */

.search-form__label-text {
  text-decoration: none;
  transition: text-decoration 0.3s;
}

.search-form__label:hover .search-form__label-text {
  text-decoration: underline;
}

/* 4.4 Состояния кнопок */

.button:focus {
  outline: none;
}

.button:focus-visible {
  outline: 1px solid #fff;
  outline-offset: 2px;
}

.button:hover {
  text-decoration: underline;
}

.button:active {
  background: #545050;
}

/* 4.5 Состояние карточек */

.content__list-item:has(.content__card-link_current) {
  background-color: #545050;
}

.content__card-link:focus {
  outline: 0;
}

.content__card-link:focus-visible {
  outline: 1px solid #fff;
  outline-offset: 1px;
}

.content__card-link:active {
  background: #545050;
}

.content__card-link:hover .content__video-card-title,
.content__card-link:hover .content__video-card-description{
  text-decoration: underline;
}

.content__card-link:hover .content__video-card-title {
  text-decoration-thickness: 2px;
}

.content__card-link:hover .content__video-card-description {
  text-decoration-thickness: 1px;
}

/* X. Скрывающий Класс для Работы с Формами */

.visually-hidden {
  position: absolute;
  inline-size: 1px;
  block-size: 1px;
  overflow: hidden;
  clip: rect(0 0 0 0);
  clip-path: inset(50%);
  white-space: nowrap;
}

